Implement truthful composite result contract